# DevContainer-HelloWorld

helloworld/: Dockerfile  pyproject.toml
helloworld/helloworld/: main.py
